# nasdaq-leveraged-simulation

./: main.ipynb  nasdaq_historical.csv  pyproject.toml  strategy.ipynb
