[project]
name = "leveraged-etfs-simulation"
version = "0.1.0"
description = "Simulation and Optimization of various daily leverages on the nasdaq"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
]
